--- a/index.html
+++ b/index.html
@@ -24,16 +24,6 @@ redirect_from:
       <h3 class='subtitle'>Aktiva</h3>
       <ul>
         <li>
-          <span class='role'>Utvecklare</span>
-          <span class='date'>från 2018</span>
-          <span class='employer'>Bonnier News</span>
-          <span class='location'>Stockholm</span>
-
-          <p class='details'>
-            Ett projekt jag genomförde: Förändring av en datastruktur i syfte att göra hanteringen av annonsörer mer flexibel. Förändringen innebar arbeten som backup och migration av databaser, förändring av grafiska gränssnitt, och skrivandet av nya automatiserade tester.
-          </p>
-        </li>
-        <li>
           <span class='role'>Suppleant</span>
           <span class='date'>från 2018</span>
           <span class='employer'>SLN STHLM</span>
@@ -70,7 +60,18 @@ redirect_from:
       </ul>
 
       <h3 class='subtitle'>Avslutade</h3>
+
       <ul>
+        <li>
+          <span class='role'>Utvecklare</span>
+          <span class='date'>2018</span>
+          <span class='employer'>Bonnier News</span>
+          <span class='location'>Stockholm</span>
+
+          <p class='details'>
+            Ett projekt jag genomförde: Förändring av en datastruktur i syfte att göra hanteringen av annonsörer mer flexibel. Förändringen innebar arbeten som backup och migration av databaser, förändring av grafiska gränssnitt, och skrivandet av nya automatiserade tester.
+          </p>
+        </li>
         <li>
           <span class='role'>Gränssnittsutvecklare</span>
           <span class='date'>2017</span>
