--- a/index.html
+++ b/index.html
@@ -40,12 +40,6 @@ redirect_from:
           </p>
         </li>
         <li>
-          <span class='role'>Ledamot</span>
-          <span class='date'>från 2017</span>
-          <span class='employer'>NBV</span>
-          <span class='location'>Stockholms län</span>
-        </li>
-        <li>
           <span class='role'>Kassör</span>
           <span class='date'>från 2017</span>
           <span class='employer'>MHF Ungdom Norrort</span>
@@ -71,6 +65,12 @@ redirect_from:
           <p class='details'>
             Ett projekt jag genomförde: Förändring av en datastruktur i syfte att göra hanteringen av annonsörer mer flexibel. Förändringen innebar arbeten som backup och migration av databaser, förändring av grafiska gränssnitt, och skrivandet av nya automatiserade tester.
           </p>
+        </li>
+        <li>
+          <span class='role'>Ledamot</span>
+          <span class='date'>2017–2018</span>
+          <span class='employer'>NBV</span>
+          <span class='location'>Stockholms län</span>
         </li>
         <li>
           <span class='role'>Gränssnittsutvecklare</span>
