--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ redirect_from:
         <li>
           <span class='role'>Suppleant</span>
           <span class='date'>från 2018</span>
-          <span class='employer'>SLN STHLM</span>
+          <span class='employer'>Drogfri Uppväxt</span>
           <span class='location'>Stockholm</span>
         </li>
         <li>
@@ -173,6 +173,7 @@ redirect_from:
             <li>Stylus</li>
           </ul>
         </li>
+        <li>Rust (<a href='https://www.rust-lang.org/'>rust-lang.org</a>)</li>
         <li>PHP</li>
         <li>WordPress</li>
         <li>Git</li>
@@ -180,8 +181,6 @@ redirect_from:
         <li>Webpack</li>
         <li>Shell Scripting
           <ul>
-            <li>sh</li>
-            <li>zsh</li>
             <li>bash</li>
           </ul>
         </li>
